--- a/app/src/main/res/layout/activity_admin_complain_fragment.xml
+++ b/app/src/main/res/layout/activity_admin_complain_fragment.xml
@@ -6,4 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".fragment.admin_fragment.AdminComplainFragment">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
