--- a/app/src/main/res/layout/fragment_customer_home.xml
+++ b/app/src/main/res/layout/fragment_customer_home.xml
@@ -5,71 +5,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="22sp"
     android:background="@android:color/white"
     tools:context=".fragment.customer_fragment.CustomerHomeFragment">
 
-    <RelativeLayout
-        android:id="@+id/relSearch"
-        android:layout_width="match_parent"
-        android:background="@color/colorPrimary"
-        android:layout_height="55dp">
-
-        <RelativeLayout
-            android:id="@+id/layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:elevation="5dp">
-
-            <TextView
-                android:id="@+id/browse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="22dp"
-                android:layout_centerVertical="true"
-                android:text="@string/app_name"
-                android:textColor="@android:color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:typeface="monospace"
-                android:fontFamily="@font/nunito_sans_reguler" />
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/mart_title"
-        android:layout_below="@id/relSearch"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5sp"
-        android:layout_marginBottom="5dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_weight="1"
-            android:textAlignment="center"
-            android:text="Registered Marts"
-            android:textColor="@color/titleColor"
-            android:textSize="22sp" />
-
-
-    </LinearLayout>
-
-
-
+        android:layout_alignParentTop="true"
+        android:background="?attr/colorPrimary"
+        android:elevation="6dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mart_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/mart_title"
+            android:layout_below="@+id/tool_bar"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
