--- a/app/src/main/res/layout/recycler_admin_order.xml
+++ b/app/src/main/res/layout/recycler_admin_order.xml
@@ -1,85 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="20dp">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="15dp">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:elevation="25dp"
+        app:cardUseCompatPadding="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:id="@+id/admin_order_date"
+                android:layout_width="35dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
+                android:layout_margin="5sp"
                 android:gravity="center"
-                android:text="201702Dec"/>
+                android:text="2017 \n 02 \nDec"
+                android:textSize="15sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5sp"
                 android:orientation="vertical">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="17sp"
-                    android:text="Order: #3480"/>
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Order:"
+                        android:textSize="17sp" />
+
+                    <TextView
+                        android:id="@+id/admin_order_number"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" #3480"
+                        android:textColor="@color/blue_500"
+                        android:textSize="17sp" />
+
+                </LinearLayout>
 
                 <TextView
+                    android:id="@+id/admin_order_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Shajed Evan"
+                    android:textColor="@color/overlay_dark_90"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:text="Shajed Evan"/>
+                    android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/admin_order_email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="evanshajeed@gmail.com"/>
+                    android:text="evanshajeed@gmail.com" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="5sp"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
                     android:gravity="center"
-                    android:text="Total"/>
+                    android:text="Total"
+                    android:textSize="17sp" />
 
                 <TextView
+                    android:id="@+id/admin_order_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="$154.00"
+                    android:textColor="@color/overlay_dark_70"
                     android:textSize="17sp"
-                    android:textStyle="bold"
-                    android:text="$154.00"/>
-
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/admin_order_status"
+                android:layout_width="wrap_content"
+                android:lines="1"
                 android:layout_height="match_parent"
+                android:layout_margin="3sp"
                 android:gravity="center"
-                android:textColor="@color/red_400"
-                android:text="processing"/>
+                android:text="processing"
+                android:textColor="@color/grey_700" />
 
         </LinearLayout>
 
-
-
-
-
-
     </androidx.cardview.widget.CardView>
 
-</RelativeLayout>
+</LinearLayout>
