recycler mart layout design, marthomeadater updated, Mart Home java fragment updated.

--- a/app/src/main/res/layout/fragment_mart_home.xml
+++ b/app/src/main/res/layout/fragment_mart_home.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="22sp"
-    android:background="@android:color/white"
-    tools:context=".fragment.mart_fragment.MartHomeFragment">
-
+    android:background="@android:color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
@@ -21,18 +17,40 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
-
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/mart_recycler_view"
+    <LinearLayout
+        android:id="@+id/order_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tool_bar"
+        android:layout_below="@id/tool_bar"
+        android:layout_marginTop="5sp"
+        android:layout_marginBottom="5dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:text="@string/OrderDetail"
+            android:textAlignment="center"
+            android:textColor="@color/titleColor"
+            android:textSize="22sp"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/order_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/order_title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginRight="0dp"
         android:layout_marginBottom="2dp" />
+
 
 </RelativeLayout>
