--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -78,6 +78,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/checkout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
