--- a/app/src/main/res/layout/review_layout.xml
+++ b/app/src/main/res/layout/review_layout.xml
@@ -18,14 +18,14 @@
         android:layout_marginTop="10dp"
         android:textSize="25dp"
         android:textColor="@color/colorPrimary"
-        android:text="Complain" />
+        android:text="Review" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/titName"
+        android:id="@+id/tvcomment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/colorPrimaryText"
-        android:hint="Please Enter Your Complain"
+        android:hint="Please Enter Your Comment/ Suggestion"
         android:inputType="textLongMessage"
         android:layout_marginTop="20dp"
         android:textColor="@color/colorPrimaryText"
@@ -35,7 +35,18 @@
 
     </com.google.android.material.textfield.TextInputEditText>
 
+    <Button
+        android:id="@+id/btnrateus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      android:textColor="#fff"
+        android:textStyle="bold"
+android:background="@drawable/shop_button_bg"
+    android:layout_below="@+id/tvcomment"
+        android:layout_centerHorizontal="true"
+   android:layout_alignParentRight="true"
 
+        android:text="Rate Us" />
 
 
 </RelativeLayout>
