--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -377,5 +377,8 @@
     <color name="material_blue_grey_95">#ff21272b</color>
     <color name="material_deep_teal_20">#ff80cbc4</color>
     <color name="material_deep_teal_50">#ff009688</color>
-
+    <color name="textSub">#76818a</color>
+    <color name="Tex">#404547</color>
+    <color name="lightgrey">#d1d1d1</color>
+    <color name="text">#545454</color>
 </resources>
